# php-json5

./: .gitignore  Cargo.toml  README.md  php-json5.stubs.php
.cargo/: config.toml
.github/workflows/: tests.yml
.reuse/: dep5
src/: lib.rs
tests/: 001.phpt  001.phpt.disabled  008.phpt.disabled  json5_basic_json.phpt  json5_invalid_input.phpt  json5_invalid_json.phpt  pass001.1.phpt.disabled  pass001.1_64bit.phpt.disabled  pass001.phpt.disabled  pass002.phpt  pass003.phpt.disabled
